--- a/styles/game.css
+++ b/styles/game.css
@@ -14,7 +14,7 @@
     box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
 }
 
-nav{
+nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -46,12 +46,13 @@ nav>ul {
 
 nav li {
     list-style: none;
-    color: #3C354F;;
+    color: #3C354F;
+    ;
     margin-right: 39px;
-    font-weight:18px;
+    font-weight: 18px;
     font-size: 1rem;
-    
-    
+
+
 }
 
 nav li a {
@@ -59,42 +60,120 @@ nav li a {
     text-decoration: none;
 }
 
- .btn-primary{
+.btn-primary {
     width: 230px;
     height: 40px;
     border-radius: 8px;
     background: rgba(11, 2, 35, 0.10);
 }
-nav li a:hover{
+
+nav li a:hover {
     color: blueviolet;
     cursor: pointer;
-}
-.btn-primary:hover{
-    color: blueviolet;
-    cursor: pointer;
-}
-/* Banner Section */
-.banner-contant h4 {
-    color: #0B0223;
-    text-align: center;
-    font-family: Work Sans;
-    font-size: 48px;
-    font-style: normal;
-    font-weight: 600;
-    line-height: normal;
-    text-transform: uppercase;
 }
 
-.banner-contant h1 {
+.btn-primary:hover {
+    color: blueviolet;
+    cursor: pointer;
+}
+
+/* Banner Section */
+
+.banner {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.banner-content {
+    width: 901px;
+height: 700px;
+background-image: url('/images/Group\ 14.png');
+background-size: cover;
+background-position: center;
+text-align: center;
+    
+}
+
+.banner-content h4 {
     text-align: center;
-    font-family: Work Sans;
+    color: #0B0223;
+    font-size: 48px;
+    font-weight: 600;
+    text-transform: uppercase;
+    margin-bottom: 20px;
+}
+
+.banner-content h1 {
+    text-align: center;
     font-size: 95px;
-    font-style: normal;
     font-weight: 800;
-    line-height: normal;
     text-transform: uppercase;
     background: linear-gradient(180deg, #F948B2 0%, #8758F1 100%);
     background-clip: text;
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+    margin-top: 0;
+}
+
+.banner-content p {
+    display: flex;
+    color: #534C64;
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+    text-transform: lowercase;
+    padding-left: 190px;
+}
+
+.sign{
+    
+    color: #FFF;
+font-size: 20px;
+font-weight: 600;
+text-transform: uppercase;
+display: inline-flex;
+padding: 14px 30px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 48px;
+background: var(--linear, linear-gradient(90deg, #FF42A5 0%, #FF42A5 100%));
+
+}
+.go{
+    color: #FFF;
+    font-size: 20px;
+    font-weight: 600;
+    text-transform: uppercase;
+    display: inline-flex;
+    padding: 14px 30px;
+    align-items: flex-start;
+    gap: 10px;
+    border-radius: 48px;
+    background-color: #4EC5F7;
+    
+    
+}
+.sign a{
+    text-decoration: none;
+}
+.go a{
+    text-decoration: none;
+}
+.sign:hover a{
+    color:red;
+    cursor: pointer;
+}
+.go:hover a{
+    color:black;
+    cursor: pointer;
+}
+
+.banner-img{
+    width: 711px;
+height: 446px;
+
 }
