--- a/styles/game.css
+++ b/styles/game.css
@@ -274,3 +274,54 @@ flex-shrink: 0;
     bottom: 200px;
 }
 /* tag secion */
+
+.icon-design{
+    /* width: 100%; */
+    /* height: 427px; */
+    display: flex;
+    gap: 10px;
+    padding-left: 150px;
+    
+}
+.baby{
+    width: 185px;
+height: 66px;
+border-radius: 50px;
+background: #FFF;
+display: flex;
+align-items: center;
+gap:5px;
+
+
+}
+.baby:hover{
+    background-color: #F948B2;
+    cursor: pointer;
+}
+.hyper{
+    display: flex;
+    gap: 10px;
+    padding-left: 250px;
+    margin-top: 50px;
+    margin-bottom: 40px;
+
+}
+.baby a{
+    text-decoration: none;
+}
+.ready{
+    width: 185px;
+    height: 66px;
+    border-radius: 50px;
+    background: #FFF;
+    display: flex;
+    align-items: center;
+    gap:5px;
+}
+.ready a{
+    text-decoration: none;
+}
+.ready:hover{
+    background-color: #F948B2;
+    cursor: pointer;
+}
